--- a/about-us.html
+++ b/about-us.html
@@ -25,38 +25,38 @@
 	</head>
 	<body class="shop home-page">
 
-	<!-- Overlay Navigation Menu -->
-	<div class="overlay-navigation-wrapper enter-bottom" data-no-scrollbar data-animation="slide-in">
-		<div class="overlay-navigation-scroll-pane">
-			<div class="overlay-navigation-inner">
-				<div class="v-align-middle">
-					<div class="overlay-navigation-header row collapse full-width">
-						<div class="column width-12">
-							<div class="navigation-hide overlay-nav-hide">
-								<a href="#">
-									<span class="icon-cancel"></span>
-								</a>
+		<!-- Overlay Navigation Menu -->
+		<div class="overlay-navigation-wrapper enter-bottom" data-no-scrollbar data-animation="slide-in">
+			<div class="overlay-navigation-scroll-pane">
+				<div class="overlay-navigation-inner">
+					<div class="v-align-middle">
+						<div class="overlay-navigation-header row collapse full-width">
+							<div class="column width-12">
+								<div class="navigation-hide overlay-nav-hide">
+									<a href="#">
+										<span class="icon-cancel"></span>
+									</a>
+								</div>
 							</div>
 						</div>
-					</div>
-					<div class="row collapse full-width">
-						<div class="column width-12">
-							<nav class="overlay-navigation nav-block">
-								<h4 class="menu-title">porcupin enquiries</h4>
-								<ul>
-									<li class="current"><a href="index.html" class="contains-sub-menu">Home</a></li>
-									<li class="current"><a href="about-us.html" class="contains-sub-menu">About Us</a></li>
-									<li class="current"><a href="our-collections.html" class="contains-sub-menu">Our Collections</a></li>
-									<li class="current"><a href="https://www.etsy.com/ca/shop/PorcuPinEnquiries" class="contains-sub-menu">Shop</a></li>
-								</ul>
-							</nav>
+						<div class="row collapse full-width">
+							<div class="column width-12">
+								<nav class="overlay-navigation nav-block">
+									<h4 class="menu-title">porcupin enquiries</h4>
+									<ul>
+										<li class="current"><a href="index.html">Home</a></li>
+										<li class="current"><a href="about-us.html">About Us</a></li>
+										<li class="current"><a href="our-collections.html">Our Collections</a></li>
+										<li class="current"><a href="https://www.etsy.com/ca/shop/PorcuPinEnquiries">Shop</a></li>
+									</ul>
+								</nav>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<!-- Overlay Navigation Menu End -->
+		<!-- Overlay Navigation Menu End -->
 
 	<div class="wrapper reveal-side-navigation">
 		<div class="wrapper-inner">
