--- a/our-collections.html
+++ b/our-collections.html
@@ -44,10 +44,10 @@
 							<nav class="overlay-navigation nav-block">
 								<h4 class="menu-title">porcupin enquiries</h4>
 								<ul>
-									<li class="current"><a href="index.html" class="contains-sub-menu">Home</a></li>
-									<li class="current"><a href="about-us.html" class="contains-sub-menu">About Us</a></li>
-									<li class="current"><a href="our-collections.html" class="contains-sub-menu">Our Collections</a></li>
-									<li class="current"><a href="https://www.etsy.com/ca/shop/PorcuPinEnquiries" class="contains-sub-menu">Shop</a></li>
+									<li class="current"><a href="index.html">Home</a></li>
+									<li class="current"><a href="about-us.html">About Us</a></li>
+									<li class="current"><a href="our-collections.html">Our Collections</a></li>
+									<li class="current"><a href="https://www.etsy.com/ca/shop/PorcuPinEnquiries">Shop</a></li>
 								</ul>
 							</nav>
 						</div>
