--- a/about-us.html
+++ b/about-us.html
@@ -124,9 +124,9 @@
 												</h1>
 												<div class="clear"></div>
 												<h4 class="tms-caption color-white lspacing-medium"
-													data-animate-in="preset:slideInRightShort;duration:1000ms;delay:300ms;"
+												 	data-animate-in="preset:slideInRightShort;duration:1000ms;delay:300ms;"
 													data-no-scale>
-													About Us
+													Simply Showing Personality - Since 2019
 												</h4>
 											</div>
 										</div>
