--- a/our-collections.html
+++ b/our-collections.html
@@ -126,7 +126,7 @@
 												<h4 class="tms-caption color-white lspacing-medium"
 													data-animate-in="preset:slideInRightShort;duration:1000ms;delay:300ms;"
 													data-no-scale>
-													Our Collections
+													Simply Showing Personality - Since 2019
 												</h4>
 											</div>
 										</div>
